--- a/MtsXMLParser.csproj
+++ b/MtsXMLParser.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="History.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
